# nutree

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini  tox_benchmarks.ini  yabs.yaml
.benchman/: nutree.61bdee7c56e0e5f7.base.bench.json
.github/workflows/: codeql.yml  python-package.yml  stale.yml  tests.yml
docs/: tutorial.html  tutorial.ipynb
docs/jupyter/: take_the_tour.ipynb  tutorial.ipynb  walkthrough.ipynb
docs/sphinx/: changes.rst  conf.py  development.rst  index.rst  installation.rst  reference_guide.rst  requirements.txt  rg_modules.rst  take_the_tour.md  take_the_tour.rst  ug_advanced.rst  ug_basics.rst  ug_benchmarks.md  ug_clones.rst  ug_diff.rst  ug_graphs.rst  ug_mutation.rst  ug_objects.rst  ug_objects_and_clones.rst  ug_overview.rst  ug_pretty_print.rst  ug_randomize.rst  ug_search_and_navigate.rst  ug_serialize.rst  user_guide.rst
nutree/: __init__.py  common.py  diff.py  dot.py  fs.py  mermaid.py  node.py  rdf.py  tree.py  tree_generator.py  typed_tree.py
tests/: conftest.py  fixture.py  make_sample_files.py  pytest.ini  test_bench.py  test_benchman.py  test_clones.py  test_core.py  test_diff.py  test_dot.py  test_fixtures.py  test_fs.py  test_mermaid.py  test_objects.py  test_rdf.py  test_serialize.py  test_tree_generator.py  test_typed_tree.py  test_typing.py  test_typing_concept.py  test_typing_self.py  tutorial.ipynb  tutorial_script.py
tests/benchman/: benchman.py  context_info.py  timings.py  tutorial.ipynb  util.py
tests/fixtures/: file_1.txt  users.yaml
tests/fixtures/folder_1/: file_1_1.txt
