# "package_data": {
#     # If any package contains *.txt files, include them:
#     # "": ["*.css", "*.html", "*.ico", "*.js"],
#     "": ["*.tmpl"],
#     "nutree.monitor": ["htdocs/*.*"],
# },
# "install_requires": install_requires,
# "setup_requires": setup_requires,
# "tests_require": tests_require,
# "py_modules": [],
# "zip_safe": False,
# "extras_require": {},
# "cmdclass": {"test": ToxCommand, "sphinx": SphinxCommand},
# "entry_points": {"console_scripts": ["nutree = nutree.leaves_cli:run"]},
# "options": {},

[metadata]
name = nutree
version = attr: nutree.__version__
author = Martin Wendt
author_email = nutree@wwwendt.de
maintainer = Martin Wendt
maintainer_email = nutree@wwwendt.de
url = https://github.com/mar10/nutree/
project_urls =
    Bug Tracker = https://github.com/mar10/nutree/issues
    Source Code = https://github.com/mar10/nutree
    Documentation = https://nutree.readthedocs.io/
    Download = https://github.com/mar10/nutree/releases/latest
description = A Python library for tree data structures with an intuitive, yet powerful, API.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = tree, data structure, nodes, hierarchy, treelib
license = MIT
license_file = LICENSE.txt
classifiers =
    # Development Status :: 3 - Alpha
    Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    ; Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = .
packages = find:
zip_safe = False

# scripts =
#   bin/first.py
#   bin/second.py

install_requires =
    # snazzy

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where = .
include_package_data = True
exclude =
    tests

[options.data_files]
. = CHANGES.md
# /etc/my_package =
#     site.d/00_default.conf
#     host.d/00_default.conf
# data = data/img/logo.png, data/svg/icon.svg

[options.entry_points]
console_scripts =
    nutree = nutree.leaves_cli:run

[bdist_wheel]
# set universal = 1 if Python 2 and 3 are supported
universal = false

# [check-manifest]
# ignore =
#     docs/sphinx-build
#     docs/sphinx-build/*

# --- Coverage Settings --------------------------------------------------------

[coverage:run]
# branch = True
omit =
    tests/*
    # nutree/leaves_cli.py
    # nutree/cli_common.py
    # nutree/monitor/*

[coverage:report]
precision = 1
# show_missing = True
sort = Name
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING: 

[coverage:html]
directory = build/coverage


# --- Flake8 Settings ----------------------------------------------------------

[flake8]
# G: enable 'flake8-logging-format'
enable-extensions = G

exclude =
    __pycache__,
    .cache,
    .eggs,
    .git,
    .tox,
    .vscode,
    build,
    dist,
    docs

max-line-length = 99
# max-line-length = 88

# 'mccabe' plugin:
# max-complexity = 12

# max-annotations-complexity = 10
# max-expression-complexity = 10

# Ignore some errors that may be created by Black:
#   - E203 whitespace before ':'
#   - E501 line too long
#   - E731 do not assign a lambda expression, use a def
#   - W503 line break before binary operator
#   - P101 format string does contain unindexed parameters
ignore = E203, E501, E731, W503, P101

# Instead of strict E501, enable B950 for relaxed line length checking (and other bugbear warnings)
# select = B,C,D,E,F,I,N,P,PT,Q,S,T,W,B9

#
docstring-convention = all  # google?

# Options for the flake8-quotes extension:
inline-quotes = double
multiline-quotes = """
docstring-quotes = """
avoid-escape = True
