# "package_data": {
#     # If any package contains *.txt files, include them:
#     # "": ["*.css", "*.html", "*.ico", "*.js"],
#     "": ["*.tmpl"],
#     "nutree.monitor": ["htdocs/*.*"],
# },
# "install_requires": install_requires,
# "setup_requires": setup_requires,
# "tests_require": tests_require,
# "py_modules": [],
# "zip_safe": False,
# "extras_require": {},
# "cmdclass": {"test": ToxCommand, "sphinx": SphinxCommand},
# "entry_points": {"console_scripts": ["nutree = nutree.leaves_cli:run"]},
# "options": {},

[metadata]
# name = nutree  # GitHub dependants needs it in setup.py?
version = attr: nutree.__version__
author = Martin Wendt
author_email = nutree@wwwendt.de
maintainer = Martin Wendt
maintainer_email = nutree@wwwendt.de
url = https://github.com/mar10/nutree/
project_urls =
    Bug Tracker = https://github.com/mar10/nutree/issues
    Source Code = https://github.com/mar10/nutree
    Documentation = https://nutree.readthedocs.io/
    Download = https://github.com/mar10/nutree/releases/latest
description = A Python library for tree data structures with an intuitive, yet powerful, API.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = tree, data structure, digraph, graph, nodes, hierarchy, treelib
license = MIT
license_files = LICENSE.txt
classifiers =
    # Development Status :: 3 - Alpha
    Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    ; Programming Language :: Python :: 3.7  # EOL 2023-06-27
    Programming Language :: Python :: 3.8  
    Programming Language :: Python :: 3.9  
    Programming Language :: Python :: 3.10 
    Programming Language :: Python :: 3.11 
    Programming Language :: Python :: 3.12 
    ; Programming Language :: Python :: 3.13 
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = .
packages = find:
zip_safe = False

# scripts =
#   bin/first.py
#   bin/second.py

install_requires =
    # snazzy

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

[options.extras_require]
graph = pydot; rdflib; graphviz
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3
random = fabulist
all = pydot; rdflib; graphviz; fabulist

[options.packages.find]
where = .
include_package_data = True
exclude =
    tests

[options.data_files]
. = CHANGELOG.md
# /etc/my_package =
#     site.d/00_default.conf
#     host.d/00_default.conf
# data = data/img/logo.png, data/svg/icon.svg

[options.entry_points]
console_scripts =
    # nutree = nutree.leaves_cli:run

[bdist_wheel]
# set universal = 1 if Python 2 and 3 are supported
universal = false

# [check-manifest]
# ignore =
#     docs/sphinx-build
#     docs/sphinx-build/*
